--- a/manifest.yml
+++ b/manifest.yml
@@ -6,7 +6,7 @@ applications:
   instances: 2
   memory: 64M
   routes:
-  - route: lab-bluemix-adora.us-south.cf.appdomain.cloud
+  - route: lab-bluemix-ador.us-south.cf.appdomain.cloud
   disk_quota: 1024M
   buildpacks: 
   - python_buildpack
